# godot-libmpv-zero

./: .gitignore  CHARTER.md  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: windows-addon.yml
project/: emissive_screen.tres  example.gd  example.gd.uid  example.tscn  example_vr.exr  example_vr.exr.import  example_vr.gd  example_vr.gd.uid  example_vr.tscn  mpv_texture.tres  openxr_action_map.tres  project.godot  smoke_test.ppm
src/: audio_bridge.cpp  audio_bridge.h  channel_audio_stream.cpp  channel_audio_stream.h  mini_mpv_client.h  mini_mpv_render.h  mini_vulkan.h  mpv_core.cpp  mpv_core.h  mpv_player.cpp  mpv_player.h  mpv_texture.cpp  mpv_texture.h  phase0_texture_probe.cpp  phase0_texture_probe.h  register_types.cpp  register_types.h  render_thread_service.cpp  render_thread_service.h  runtime_library_utils.cpp  runtime_library_utils.h  sw_video_output.cpp  sw_video_output.h  video_output_backend.h  vk_video_output.cpp  vk_video_output.h
tools/: build_mpv_local.ps1  run_sample_console.ps1  run_xr_reload_trace.ps1  run_xr_seek_trace.ps1  setup_mpv_build_env.ps1  setup_windows_mpv_dev.ps1
